# RETSRec_yen

./: README.md  prepare_data.py  pyproject.toml  train.py
src/core/: aws_rec_dataset.py  aws_rec_dataset_old.py  bert4rec.py  rec_metrics.py  rec_model.py  rec_model_old.py  sbrec.py  trainer.py
